Uploaded main game page
Both players can play the game after accepting the invitation

--- a/public/index.html
+++ b/public/index.html
@@ -89,9 +89,7 @@
         </div>
     </div>
 
-    <div id="game-screen" class="col">
-        <p>Veronica's page</p>
-    </div>
+    <div id="game-screen"></div>
 
     <script src="/socket.io/socket.io.min.js"></script>
     <script src="scripts/socket.js"></script>
@@ -99,6 +97,8 @@
     <script src="scripts/ui.js"></script>
     <script src="scripts/registration.js"></script>
     <script src="scripts/authentication.js"></script>
+
+    <script src="plants_vs_zombies.html"></script>
     <script>
 
     let timeout;
