added merge disappeared code

--- a/public/plants_vs_zombies.html
+++ b/public/plants_vs_zombies.html
@@ -879,6 +879,7 @@
 
                     
                 /* Start the game */
+                sounds.background.volume = 0.5;
                 sounds.background.play();
                 sounds.starting.play();
                 requestAnimationFrame(doFrame);
