--- a/public/gameOver.html
+++ b/public/gameOver.html
@@ -44,6 +44,26 @@
     $(document).ready(function() {
         /* Get the canvas and 2D context */
         Stats.gameOver()
+        const soc = Socket.getSocket()
+        soc.emit("request stat")
+        soc.on("stat", (p1, p1k, p2, p2k) => {
+            $("#player1-name").html(p1)
+            $("#player2-name").html(p2)
+            $("#player1-kill").html(p1k)
+            $("#player2-kill").html(p2k)
+
+            if(p1k > p2k){
+                $("#player1-rank").html("1st")
+                $("#player2-rank").html("2nd")
+            }else if (p2k > p1k){
+                $("#player2-rank").html("1st")
+                $("#player1-rank").html("2nd")
+            }else{
+                $("#player2-rank").html("1st")
+                $("#player1-rank").html("1st")
+            }
+
+        })
     
     });
     </script>
