--- a/public/index.html
+++ b/public/index.html
@@ -30,11 +30,12 @@
                     <div id="description-title">Game Description:</div>
                     <div id="description-content">
                         This is a COMP4021 project style Plants VS Zombies. <br>
-                        [ToDo] Some contents about how to play the game.
+                        Beat your friend by killing the most Zombies!
                     </div>
                     <div id="pair-up">How to Pair Up:</div>
                     <div id="pair-up-content">
-                        Click on the icon of an online player to invite that player.
+                        Click on the icon of an online player to invite that player. <br>
+                        Click on "Accept" to accept your friend's invitation to start a game!
                     </div>
                 </div>
                 <div id="typing-notice"></div>
