--- a/public/plants_vs_zombies.html
+++ b/public/plants_vs_zombies.html
@@ -302,7 +302,7 @@
             gameover: new Audio("./audio/endmusic.ogg")
         };
 
-        const totalGameTime = 20;   // Total game time in seconds
+        const totalGameTime = 240;   // Total game time in seconds
         //const gemMaxAge = 3000;     // The maximum age of the gems in milliseconds
         let gameStartTime = 0;      // The timestamp when the game starts
         let collectedGems = 0;      // The number of gems collected in the game
@@ -324,7 +324,7 @@
 
 
         // The resources player have
-        let player_sun = 300;
+        let player_sun = 400;
 
         // Use to configure the image of the cursor
         // 0 = none, 1 = sunflower, 2 = peashooter
@@ -1029,11 +1029,13 @@
                             // Update number of zombie(s) killed
                             if (user.username == player1){
                                 player1_kills = player1_kills + 1;
-                                player2_kills = -1
-                            }else{
-                                player2_kills = player2_kills + 1;
-                                player1_kills = -1
+                                //player2_kills = -1
                             }
+                            //else{
+                                //player2_kills = player2_kills + 1;
+                                //player1_kills = -1
+                                
+                            //}
                             setTimeout(() => {zombies[j].splice(k, 1)}, 3000);
                         }
 
@@ -1090,8 +1092,8 @@
                         if(zombies[j][k].isdead() && zombies[j][k].callSplice()) {
                             // Update number of zombie(s) killed
                             if (user.username == player1){
-                                player1_kills = player1_kills + 1;
-                            }else{
+                            //    player1_kills = player1_kills + 1;
+                            //}else{
                                 player2_kills = player2_kills + 1;
                             }
                             setTimeout(() => {zombies[j].splice(k, 1)}, 3000);
