--- a/public/plants_vs_zombies.html
+++ b/public/plants_vs_zombies.html
@@ -807,7 +807,14 @@
                 sounds.gameover.play();
 
                 $("#game-screen").load("gameOver.html");
-                soc.emit("call game over", player1, player1_kills, player1_sun_collected, player2, player2_kills, player2_sun_collected)
+
+                //As we don't have another player's data, we set those parameter to -1, telling the server not handle that
+                if( user.username == player1){
+                    soc.emit("call game over", player1, player1_kills, player1_sun_collected, player2, -1, -1)
+                }else{
+                    soc.emit("call game over", player1, -1, -1, player2, player2_kills, player2_sun_collected)
+                }
+                
                 //$("#game-over").fadeIn();
                 return;
             }
