Fixed sun sprite update

--- a/public/plants_vs_zombies.html
+++ b/public/plants_vs_zombies.html
@@ -908,7 +908,7 @@
 
                     // also update the sprite for sun(s)
                     for(let k=0; k<sunGrid[i][j].length; k++) {
-                        sunGrid[i][j][k].update();
+                        sunGrid[i][j][k].update(now);
                     }
                 }
             }
